fixed freia and added text-align

--- a/app/src/main/assets/html/style.css
+++ b/app/src/main/assets/html/style.css
@@ -7,3 +7,7 @@ img {
     width: 100%;
     height: auto;
 }
+
+p {
+    text-align: justify;
+}
